--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="./assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="./assets/css/custom.css" rel="stylesheet" type="text/css" />
 
     <!-- Favicons -->
     <link rel="apple-touch-icon" href="./assets/img/favicons/apple-touch-icon.png" sizes="180x180" />
@@ -21,38 +22,6 @@
     <link rel="mask-icon" href="./assets/img/favicons/safari-pinned-tab.svg" color="#7952b3" />
     <link rel="icon" href="./assets/img/favicons/favicon.ico" />
     <meta name="theme-color" content="#7952b3" />
-
-    <style>
-        body {
-            font-family: 'Arial';
-            background: lightgray
-        }
-
-        ul {
-            list-style-type: none;
-            padding: 20px;
-        }
-
-        li {
-            padding: 15px;
-            background: lightcoral;
-            margin-bottom: 10px;
-        }
-
-        .bd-placeholder-img {
-            font-size: 1.125rem;
-            text-anchor: middle;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            user-select: none;
-        }
-
-        @media (min-width: 768px) {
-            .bd-placeholder-img-lg {
-                font-size: 3.5rem;
-            }
-        }
-    </style>
     <!-- IMPORTANT: Uncomment these before building for production! -->
     <!-- <script src="https://unpkg.com/rxjs@7.4.0/dist/bundles/rxjs.umd.min.js"></script>
     <script>
@@ -74,19 +43,15 @@
 </head>
 
 <body>
-    <div>
-        <ul id="list"></ul>
-    </div>
     <header>
         <div class="collapse bg-dark" id="navbarHeader">
             <div class="container">
-                <div class="row" id="books">
+                <div class="row">
                     <div class="col-sm-8 col-md-7 py-4">
                         <h4 class="text-white">About</h4>
                         <p class="text-muted">
-                            Add some information about the album below, the author, or any
-                            other background context. Make it a few sentences long so folks
-                            can pick up some informative tidbits. Then, link them off to
+                            Search for informations about books below, the author, or any
+                            other background context or go to our shop to buy them. Then, link them off to
                             some social networking sites or contact information.
                         </p>
                     </div>
@@ -104,13 +69,12 @@
         <div class="navbar navbar-dark bg-dark shadow-sm">
             <div class="container">
                 <a href="#" class="navbar-brand d-flex align-items-center">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor"
-                        stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="me-2"
-                        viewBox="0 0 24 24">
-                        <path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z" />
-                        <circle cx="12" cy="13" r="4" />
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+                        class="bi bi-book" viewBox="0 0 16 16">
+                        <path
+                            d="M1 2.828c.885-.37 2.154-.769 3.388-.893 1.33-.134 2.458.063 3.112.752v9.746c-.935-.53-2.12-.603-3.213-.493-1.18.12-2.37.461-3.287.811V2.828zm7.5-.141c.654-.689 1.782-.886 3.112-.752 1.234.124 2.503.523 3.388.893v9.923c-.918-.35-2.107-.692-3.287-.81-1.094-.111-2.278-.039-3.213.492V2.687zM8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783z" />
                     </svg>
-                    <strong>Album</strong>
+                    <span class="app-title">Books</span>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader"
                     aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
@@ -122,39 +86,7 @@
     <main>
         <div class="album py-5 bg-light">
             <div class="container">
-                <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-                    <div class="col">
-                        <div class="card shadow-sm">
-                            <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-                                xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
-                                preserveAspectRatio="xMidYMid slice" focusable="false">
-                                <title>Placeholder</title>
-                                <rect width="100%" height="100%" fill="#55595c" />
-                                <text x="50%" y="50%" fill="#eceeef" dy=".3em">
-                                    Thumbnail
-                                </text>
-                            </svg>
-
-                            <div class="card-body">
-                                <p class="card-text">
-                                    This is a wider card with supporting text below as a natural
-                                    lead-in to additional content. This content is a little bit
-                                    longer.
-                                </p>
-                                <div class="d-flex justify-content-between align-items-center">
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">
-                                            View
-                                        </button>
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">
-                                            Edit
-                                        </button>
-                                    </div>
-                                    <small class="text-muted">9 mins</small>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3" id="books">
                 </div>
             </div>
         </div>
@@ -180,6 +112,23 @@
     <script src="./assets/js/bootstrap.min.js"></script> -->
     <!-- IMPORTANT: Uncomment these before building for production! -->
     <script src="./assets/js/plugin.js"></script>
+    <div class="modal fade" id="buy-book" tabindex="-1" aria-labelledby="buy-book" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    ...
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
