--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <form class="d-flex">
                         <input id="search" class="form-control me-2" type="search" placeholder="Search"
                             aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
+                        <button id="searchButton" class="btn btn-outline-success" type="button">Search</button>
                     </form>
                 </div>
             </div>
@@ -119,6 +119,7 @@
     <main>
         <div class="album py-5 bg-light">
             <div class="container">
+                <h1>Books found: <span id="found">0</span></h1>
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3" id="books">
                 </div>
             </div>
