Button search OK + Clear button added (TODO: load default value on page load)

--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
                     <form class="d-flex">
                         <input id="search" class="form-control me-2" type="search" placeholder="Search"
                             aria-label="Search">
-                        <button id="searchButton" class="btn btn-outline-success" type="button">Search</button>
+                        <button id="searchButton" class="btn btn-outline-success" type="button">Search</button>&nbsp
+                        <button id="cleanButton" class="btn btn-outline-light" type="button">Clear</button>
                     </form>
                 </div>
             </div>
